--- a/README
+++ b/README
@@ -22,7 +22,7 @@
 #///////////////////////////////////////////////////////////////////////#
 #			Compile						#
 #									#
-# For nomal compilation,use the "make" code as normally. See Makefile 	#
+# For normal compilation,use the "make" code as normally. See Makefile 	#
 # file for further information.						#
 #///////////////////////////////////////////////////////////////////////#
 #			Usage						#
